--- a/frontend/src/shared/components/image/image.component.scss
+++ b/frontend/src/shared/components/image/image.component.scss
@@ -15,3 +15,12 @@
     width: 100px;
     height: 80px;
 }
+
+.profile-pic-editor{
+    width: 95px;
+    height: 95px;
+    @media(min-width:640px) {
+        width: 130px;
+        height: 130px;
+    }
+}
