--- a/frontend/src/shared/forms/input/input.component.scss
+++ b/frontend/src/shared/forms/input/input.component.scss
@@ -63,10 +63,10 @@ input {
 // USER EDITOR PAGE
 .user-edit__input{
     color: $main-font-color;
-    width: 60%;
-    margin-bottom: 15px;
+    width: 100%;
+    margin-bottom: 5px;
     border: 1px solid #AFAFAF;
-    padding: 10px 25px;
+    padding: 5px;
     font-size: 0.9rem;
     transition: 0.4s;
     position: relative;
