--- a/frontend/src/shared/modal/modal.component.scss
+++ b/frontend/src/shared/modal/modal.component.scss
@@ -15,7 +15,7 @@
     .jw-modal-body {
         padding: 20px;
         background: #373F46;
-        margin: 100px;
+        margin: 100px 300px;
     }
 }
 
