--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -32,7 +32,7 @@ body{
             grid-row: 2/3;
         }
 
-        app-main, app-example1 {
+        app-main, app-example1, app-user-editor  {
             grid-column: 2/7;
             grid-row: 2/3;
         }
