--- a/frontend/src/shared/forms/submit-btn/submit-btn.component.scss
+++ b/frontend/src/shared/forms/submit-btn/submit-btn.component.scss
@@ -40,3 +40,9 @@ button {
     display: block;
     text-transform: uppercase;
 }
+
+.change-Password-Form__submit{
+    padding: 0.5em;
+    margin: 0em;
+    width: 100%;
+}
