--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -18,7 +18,7 @@ body{
         grid-template-columns: repeat(8,1fr);
         grid-template-rows: 10% auto 20%;
         @media(min-width: $tablet) {
-            grid-template-rows: 20% auto 20%;
+            grid-template-rows: 69px auto 20%;
                 
         }
         app-login{
@@ -42,6 +42,11 @@ body{
         app-nav {
             grid-row: 1/2;
             grid-column: 1/9;
+        }
+
+        app-sidebar {
+            grid-column: 7/9;
+            grid-row: 2/3;
         }
 
 
