--- a/frontend/src/admin/admin-user-editor/admin-user-editor.component.html
+++ b/frontend/src/admin/admin-user-editor/admin-user-editor.component.html
@@ -100,25 +100,25 @@
           [formInputStyle]="'user-edit__input'"
           [type]="'password'"
           [placeholder]="'Old password'"
-          [controlName]="updateUserForm.controls.oldPassword">
+          [controlName]="updateUserForm.controls.changePasswordGroup.controls.oldPassword">
         </app-input>
         <app-error
           [class]="'user-editor-error-msg'"
           *ngIf="
-            updateUserForm.get('oldPassword').errors?.required &&
-            updateUserForm.get('oldPassword').touched">
+            updateUserForm.get('changePasswordGroup.oldPassword').errors?.required &&
+            updateUserForm.get('changePasswordGroup.oldPassword').touched">
           {{ validationMessages.required }}
         </app-error>
         <app-error
           [class]="'user-editor-error-msg'"
           *ngIf="
-            updateUserForm.get('oldPassword').errors?.minlength &&
-            updateUserForm.get('oldPassword').touched">
+            updateUserForm.get('changePasswordGroup.oldPassword').errors?.minlength &&
+            updateUserForm.get('changePasswordGroup.oldPassword').touched">
           {{ validationMessages.password }}
         </app-error>
       </div>
 
-      <div formGroupName="passwordGroup" class="input-group">
+      <div class="input-group">
         <p>New password:</p>
         <app-input
           [id]="'password'"
@@ -126,20 +126,20 @@
           [placeholder]="'New password'"
           [type]="'password'"
           [controlName]="
-            updateUserForm.controls.passwordGroup.controls.password">
+            updateUserForm.controls.changePasswordGroup.controls.passwordGroup.controls.password">
         </app-input>
         <app-error
           [class]="'user-editor-error-msg'"
           *ngIf="
-            updateUserForm.get('passwordGroup.password').errors?.required &&
-            updateUserForm.get('passwordGroup.password').touched">
+            updateUserForm.get('changePasswordGroup.passwordGroup.password').errors?.required &&
+            updateUserForm.get('changePasswordGroup.passwordGroup.password').touched">
           {{ validationMessages.required }}
         </app-error>
         <app-error
           [class]="'user-editor-error-msg'"
           *ngIf="
-            updateUserForm.get('passwordGroup.password').errors?.minlength &&
-            updateUserForm.get('passwordGroup.password').touched">
+            updateUserForm.get('changePasswordGroup.passwordGroup.password').errors?.minlength &&
+            updateUserForm.get('changePasswordGroup.passwordGroup.password').touched">
           {{ validationMessages.password }}
         </app-error>
 
@@ -152,19 +152,19 @@
           [placeholder]="'Confirm password'"
           [type]="'password'"
           [controlName]="
-            updateUserForm.controls.passwordGroup.controls.repeatPassword">
+            updateUserForm.controls.changePasswordGroup.controls.passwordGroup.controls.repeatPassword">
         </app-input>
         <app-error
           [class]="'user-editor-error-msg'"
           *ngIf="
-            updateUserForm.get('passwordGroup.repeatPassword').errors
+            updateUserForm.get('changePasswordGroup.passwordGroup.repeatPassword').errors
               ?.required &&
-            updateUserForm.get('passwordGroup.repeatPassword').dirty">
+            updateUserForm.get('changePasswordGroup.passwordGroup.repeatPassword').dirty">
           {{ validationMessages.required }}
         </app-error>
         <app-error
           [class]="'user-editor-error-msg'"
-          *ngIf="updateUserForm.get('passwordGroup').errors?.match">
+          *ngIf="updateUserForm.get('changePasswordGroup.passwordGroup').errors?.match">
           {{ validationMessages.matchingPassword }}
         </app-error>
       </div>
@@ -172,7 +172,7 @@
     <app-submit-btn
         [buttonStyle]="''"
         [type]="'submit'"
-        >
+        [disabled]="updateUserForm.invalid">
         Change password
       </app-submit-btn>
   </form>
