chat websocket frontend

--- a/frontend/src/chat/chat-bar/chat-bar.component.html
+++ b/frontend/src/chat/chat-bar/chat-bar.component.html
@@ -1,4 +1,1 @@
-<!-- <div><ng-content></ng-content></div> -->
-<div>
-  chat bar
-</div>
+<div [class]="chatBarStyle"><ng-content></ng-content></div>
