--- a/frontend/src/chat/chat-context-menu/chat-context-menu.component.html
+++ b/frontend/src/chat/chat-context-menu/chat-context-menu.component.html
@@ -1,3 +1,8 @@
-<p>
-  chat-context-menu works!
-</p>
+<ul 
+    [class]="appChatContextMenuStyles" 
+    [ngStyle]="contexMenuPositionStyles" 
+    (contextmenu)="donotShowDefaultContextMenu()">
+
+    <li [class]="item.classDisabled" *ngFor="let item of contextMenu.items" (click)="onClick(item)">{{ item.value }}</li>
+    
+</ul>
