--- a/frontend/src/chat/user-message-info/user-message-info.component.html
+++ b/frontend/src/chat/user-message-info/user-message-info.component.html
@@ -1,4 +1,4 @@
-<div>
-  <app-image [src]="'../../assets/img/avatar.png'" [class]="''"></app-image>
+<div [class]="userMessageInfoStyle">
+  <app-image [url]="'../../assets/img/avatar.png'" [class]="''" [size]="[30, 30]"></app-image>
   <div><ng-content></ng-content></div>
 </div>
