--- a/frontend/src/shared/forms/input/input.component.scss
+++ b/frontend/src/shared/forms/input/input.component.scss
@@ -58,3 +58,23 @@ input {
             outline: none;
         }
 }
+
+.chat__input {
+    background: #fff;
+    height: 41px;
+    width: 206.3px;
+    color: #313131;
+    padding: 15px;
+    margin: 0;
+    border: none;
+    border-radius: 0 0 0 10px;
+    border-bottom: 1px solid #d4d4d4;
+    border-left: 1px solid #d4d4d4;
+    border-top: 1px solid #d4d4d4;
+    border-right: 1px solid #d4d4d426;
+    box-sizing: inherit;
+
+    &:focus {
+        outline: none;
+    }
+}
