--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-nav *ngIf="isActive"></app-nav>
-<app-sidebar></app-sidebar>
+<app-sidebar *ngIf="isActive"></app-sidebar>
 <router-outlet></router-outlet>
