--- a/frontend/src/core/nav/nav.component.html
+++ b/frontend/src/core/nav/nav.component.html
@@ -2,13 +2,10 @@
   <label for="toggle">&#9776;</label>
   <input type="checkbox" id="toggle" />
   <nav>
-    <div class="logo-bookmarks-container">
+    <div *ngIf="bookmark$ | async" class="logo-bookmarks-container">
       <h3 class="logo"><a href="#">LOGO</a></h3>
-      <ul class="bookmarks">
-        <li><a href="#">Bookmark1</a></li>
-        <li><a href="#">Bookmark1</a></li>
-        <li><a href="#">Bookmark1</a></li>
-        <li><a href="#">Bookmark1</a></li>
+      <ul class="bookmarks" *ngFor="let item of bookmark$ | async">
+        <li *ngIf="item?.position === 'TOP'" (click)="navigateToSubpage(item.title)" ><a >{{item.title}}</a></li>
       </ul>
     </div>
     <div class="header-user-info">
