--- a/frontend/src/core/sidebar/sidebar.component.html
+++ b/frontend/src/core/sidebar/sidebar.component.html
@@ -1,9 +1,5 @@
 <div class="sidebar">
-  <ul>
-    <li><a>Bookmark 1</a></li>
-    <li><a>Bookmark 2</a></li>
-    <li><a>Bookmark 3</a></li>
-    <li><a>Bookmark 4</a></li>
-    <li><a>Bookmark 5</a></li>
+  <ul *ngFor="let item of bookmark$ | async">
+    <li *ngIf="item.position === 'RIGHT'"(click)="navigateToSubpage(item.title)"><a >{{item.title}}</a></li>
   </ul>
 </div>
