--- a/frontend/src/core/sidebar/sidebar.component.scss
+++ b/frontend/src/core/sidebar/sidebar.component.scss
@@ -1,19 +1,20 @@
 @import '../../assets/main-style.scss';
 
 div {
-    width: 70%;
-    float: right;
-    height: 100vh;
+    float:right;
+    position: static;
     background-color: $sec-back-color;
-    padding: 20px 0;
-    box-shadow: 1px 16px 29px 0px rgba(0, 0, 0, 0.75);
+    margin-top:80px;
+    width: 60%;
+    box-shadow:  0px 0px 9px 3px rgba(0,0,0,0.3);
+    text-transform: uppercase;
+
 
     ul {
         list-style: none;
-        margin-top: 20px;
         li {
             display: block;
-            padding: 20px;
+            padding: 25px 10px;
             text-align: center;
             border-bottom: 1px solid rgba(0,0,0,0.2);
             cursor: pointer;
