--- a/frontend/src/document/doc-prev/doc-prev.component.html
+++ b/frontend/src/document/doc-prev/doc-prev.component.html
@@ -1,13 +1,13 @@
 <article class="doc-prev">
   <div class="doc-prev__desc">
-    <span class="doc-prev__desc--title">{{ document.title }}</span>
-    <span class="doc-prev__desc--author">{{ document.author }}</span>
-    <span class="doc-prev__desc--date">{{ document.date }}</span>
+    <span class="doc-prev__desc--title">{{ preview.title }}</span>
+    <span class="doc-prev__desc--author">{{ preview.author }}</span>
+    <span class="doc-prev__desc--date">{{ preview.date }}</span>
   </div>
   <p class="doc-prev__content">
-    {{ document.preview }}
+    {{ preview.preview }}
   </p>
-  <app-router-btn [link]="'../doc/'+document.id" [class]="'doc-prev__open'">
+  <app-router-btn [link]="'../doc/'+preview.id" [class]="'doc-prev__open'">
     Show More
   </app-router-btn>
 </article>
