--- a/frontend/src/chat/chat-bar/chat-bar.component.scss
+++ b/frontend/src/chat/chat-bar/chat-bar.component.scss
@@ -1,5 +1,5 @@
-.bar {
-    background-color: #252525b7;
+.chat-bar {
+    background-color: #25252599;
     color: #fff;
     height: 35px;
     line-height: 35px;
