--- a/frontend/src/chat/chat-context-menu/chat-context-menu.component.scss
+++ b/frontend/src/chat/chat-context-menu/chat-context-menu.component.scss
@@ -3,6 +3,7 @@
     background-color: #fafafa;
     border: solid 1px #cfcfcf;
     box-shadow: 1px 1px 2px #cfcfcf;
+    overflow: hidden;
 
     li {   
         list-style: none;
