--- a/frontend/src/shared/forms/submit-btn/submit-btn.component.scss
+++ b/frontend/src/shared/forms/submit-btn/submit-btn.component.scss
@@ -55,6 +55,7 @@ button {
     box-shadow: 1px 1px 2px #646464;
     box-sizing: inherit;
     transition: 0.5s;
+    user-select: none;
 
     &:hover {
         transform: none;
