commit before merge

--- a/frontend/src/chat/chat/chat.component.html
+++ b/frontend/src/chat/chat/chat.component.html
@@ -16,7 +16,7 @@
 
     <app-send-message 
       [sendMessageStyles]="'send-message'"  
-      [userIsBanned]="userIsBanned" 
+      [userIsBanned]="loggedUser.isBanned" 
       (messageEmitter)="onMessage($event)"></app-send-message>
 
     <app-chat-context-menu 
