working pdf download... sort of

--- a/frontend/src/document/doc/doc.component.html
+++ b/frontend/src/document/doc/doc.component.html
@@ -12,7 +12,7 @@
     <app-router-btn [link]="'/main'" [class]="'doc-prev__open'">
       Return
     </app-router-btn>
-    <app-submit-btn>Download</app-submit-btn>
+    <app-submit-btn (click)="downloadPDF()">Download</app-submit-btn>
   </div>
 </article>
 
