bookmark edit/delete without store

--- a/frontend/src/shared/forms/input/input.component.scss
+++ b/frontend/src/shared/forms/input/input.component.scss
@@ -1,4 +1,4 @@
-@import '../../../assets//main-style.scss';
+@import '../../../assets/main-style.scss';
 
 //REGISTER PAGE
 .register-form__input {
@@ -91,4 +91,17 @@ input {
 
 .user-editor-form__file {
     display: none;
+}
+
+
+//BOOKMARK-EDITOR 
+.bookmark-editor__input {
+    padding: 10px;
+    border: 1px solid #A5B1BE;
+    margin-left: 10px;
+
+    &:focus {
+        border: 1px solid $main-color;
+        outline: none;
+    }
 }
