--- a/frontend/src/admin/bookmark-creator/bookmark-creator.component.scss
+++ b/frontend/src/admin/bookmark-creator/bookmark-creator.component.scss
@@ -1,7 +1,47 @@
+@import '../../assets/main-style.scss';
+
 .container {
-    width: 400px;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    margin-top: 60px;
+    background-color: $sec-back-color;
+    width: 600px;
+    align-content: space-between;
     flex-direction: column;
+
+
+        .bookmark-info {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            padding: 20px 15px;
+            border-bottom: 1px solid black;
+                .title {
+                    width: 220px;
+                }
+                .position{
+                    width: 200px;
+                    margin-left: 30px;
+                }
+                button{
+                    background: $main-color;
+                    border: none;
+                    color: $main-font-color;
+                    cursor: pointer;
+                    display: inline-block;
+                    font-size: $btn-font-size;
+                    margin: 0.5em;
+                    padding: 1em;
+                }
+            
+
+            &:last-child {
+                border:none;
+
+            }
+
+            strong{
+                color: $main-color;
+            }
+        }
 }
