--- a/frontend/src/chat/message/message.component.scss
+++ b/frontend/src/chat/message/message.component.scss
@@ -1,5 +1,5 @@
 .message-container {
-    background: #25252599;
+    background: hsla(0, 0%, 15%, 0.6);
     padding: 2px 5px;
     min-height: 250px;
     max-height: 250px;
