--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-nav *ngIf="isActive"></app-nav>
 <app-sidebar *ngIf="isActive"></app-sidebar>
 <router-outlet></router-outlet>
+<app-chat *ngIf="loggedUser" [chatStyle]="'chat'" [loggedUser]="loggedUser"></app-chat>
