--- a/frontend/src/chat/chat-bar/chat-bar.component.scss
+++ b/frontend/src/chat/chat-bar/chat-bar.component.scss
@@ -1,5 +1,5 @@
 .chat-bar {
-    background-color: #25252599;
+    background-color: hsla(0, 0%, 15%, 0.6);
     color: #fff;
     height: 35px;
     line-height: 35px;
