--- a/frontend/src/chat/message/message.component.html
+++ b/frontend/src/chat/message/message.component.html
@@ -9,6 +9,7 @@
       <ng-template #message>
         <div [class]="messageStyle">
           <app-user-message-info 
+          [pic]="msg.user.pic"
           [userMessageInfoStyle]="'userMessageInfo'">{{ msg.user.firstName }} {{ msg.user.lastName }}</app-user-message-info>
           <app-message-content 
           [messageContentStyle]="'messageContent'">{{ msg.message.message }}</app-message-content>
