--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -70,12 +70,10 @@ body{
         }     
        
         app-chat {
-            position: absolute;
+            position: fixed;
             bottom: 0px;
             right: 15%;
             width: 280px;
-            // grid-column: 1/2;
-            // grid-row: 3/4;
         }
     }
 }
