--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -68,6 +68,11 @@ body {
     app-doc {
       grid-column: 2/8;
       grid-row: 2/3;
+      
+      > * {
+        display: inline-block;
+        padding: 2em;
+      }
     }
 
     app-subpage-container {
