ngrx update almost working

--- a/frontend/src/admin/bookmark-form/bookmark-form.component.html
+++ b/frontend/src/admin/bookmark-form/bookmark-form.component.html
@@ -43,7 +43,7 @@
             </app-input>RIGHT
            </label>
         </div>
-        <app-submit-btn [buttonStyle]="'button'" [type]="'submit'" ></app-submit-btn>
+        <app-submit-btn [buttonStyle]="'button'" [type]="'submit'" > Save changes</app-submit-btn>
         <!-- <button type="submit">test</button> -->
     </form>
 </div>
