traps and vulgarity removed

--- a/frontend/src/document/pdf-view/pdf-view.component.html
+++ b/frontend/src/document/pdf-view/pdf-view.component.html
@@ -16,7 +16,7 @@
     <i class="fa fa-arrow-left" aria-hidden="true"></i>
   </button>
 
-  <input #chuj
+  <input
     class="controls__page" 
     [(ngModel)]="pageNr" 
     (change)="getContent()" 
