created like button

--- a/frontend/src/document/doc/doc.component.html
+++ b/frontend/src/document/doc/doc.component.html
@@ -3,7 +3,7 @@
     <span class="doc__desc--title">{{document.data.document.title}}</span>
     <span class="doc__desc--author">{{document.data.document.author}}</span>
     <span class="doc__desc--date">{{document.data.document.date}}</span>
-    <app-submit-btn [buttonStyle]="'doc__desc--like'">Like</app-submit-btn>
+    <app-like-btn [buttonStyle]="'doc__desc--like'"></app-like-btn>
   </div>
 
   <app-pdf-view [adress]="url"></app-pdf-view>
