--- a/frontend/src/document/doc/doc.component.scss
+++ b/frontend/src/document/doc/doc.component.scss
@@ -32,7 +32,7 @@
         //     margin: 0 0 0 auto;
         //     text-align: right;
         // }
-        app-submit-btn {
+        app-like-btn {
             margin: 0 0 0 auto;
             text-align: right;
         }
