--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-nav *ngIf="isActive"></app-nav>
-<app-sidebar *ngIf="isActive"></app-sidebar>
-<router-outlet></router-outlet>
+<app-nav [bookmark$] ="bookmark$" *ngIf="isActive"></app-nav>
+<app-sidebar [bookmark$] ="bookmark$" *ngIf="isActive"></app-sidebar>
+<router-outlet ></router-outlet>
