--- a/frontend/src/admin/bookmark-info/bookmark-info.component.html
+++ b/frontend/src/admin/bookmark-info/bookmark-info.component.html
@@ -5,7 +5,7 @@
     <div class="bookmark-info--position">
         <p>Position: <Strong>{{data.position}}</Strong></p>
     </div>
-    <app-button [class]="'boomark-info__button'" (clickEvent)="toggleForm(data)">Edit Bookmark</app-button>
-    <app-button [class]="'boomark-info__button--delete'" (clickEvent)="deleteBookmark(data)">Delete Bookmark <i class="fa fa-trash"></i></app-button>
+    <app-button [class]="'boomark-info__button'" (clickEvent)="toggleForm(data)">Edit <i class="fa fa-pencil" ></i></app-button>
+    <app-button [class]="'boomark-info__button--delete'" (clickEvent)="deleteBookmark(data)">Delete <i class="fa fa-trash"></i></app-button>
 </div>
 <app-bookmark-form [data]="data" *ngIf="isShown" ></app-bookmark-form>
