--- a/frontend/src/shared/components/button/button.component.scss
+++ b/frontend/src/shared/components/button/button.component.scss
@@ -8,7 +8,7 @@
     display: inline-block;
     font-size: $btn-font-size;
     margin: 0.5em;
-    padding: 10px;
+    padding: 14px;
 }
 
 .boomark-info__button--delete{
@@ -19,7 +19,16 @@
     display: inline-block;
     font-size: $btn-font-size;
     margin: 0.5em;
-    padding: 10px;
-
+    padding: 14px;
 }
+
+.app-bookmark {
+    display:inline-block;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    border: none;
+    // padding: 0;
+}
+
 
