--- a/frontend/src/admin/admin-user-editor/admin-user-editor.component.html
+++ b/frontend/src/admin/admin-user-editor/admin-user-editor.component.html
@@ -1,177 +1,165 @@
+<div class="errorMSG" *ngIf="message">
+  Error during update: {{error}}
+</div>
 
-<select *ngIf="users" [(ngModel)]="selectedUser">
-  <option *ngFor="let user of users.data.users" [ngValue]="user">{{ user.firstName }} {{ user.lastName }}</option>
-</select>
+<div class="successMSG" *ngIf="isSent">
+  User has been updated
+</div>
 
-<div *ngIf="selectedUser">
-  <form
-    class="updateUser"
-    [formGroup]="updateUserForm"
-    (ngSubmit)="updateUser(updateUserForm)">
-    <p class="change-creds">Change first name:</p>
+<div class='container'>
+  <p class="usereditor">User editor:</p>
+  <input 
+    [(ngModel)]="searchbox" 
+    placeholder="Search..." 
+    class="searchbox" 
+    (keyup)="filter()">
 
-    <div class="input-group">
-      <app-input
-        [id]="'firstName'"
-        [formInputStyle]="'user-edit__input'"
-        [type]="'text'"
-        [placeholder]="'First name'"
-        [controlName]="updateUserForm.controls.firstName"
-        [value]="selectedUser.firstName">
-      </app-input>
-      <app-error
-        [class]="'user-editor-error-msg'"
-        *ngIf="
-          updateUserForm.get('firstName').errors?.required &&
-          updateUserForm.get('firstName').touched">
-        {{ validationMessages.required }}
-      </app-error>
-      <app-error
-        [class]="'user-editor-error-msg'"
-        *ngIf="
-          updateUserForm.get('firstName').errors?.minlength &&
-          updateUserForm.get('firstName').touched">
-        {{ validationMessages.firstName }}
-      </app-error>
-    </div>
+  <select *ngIf="users" [(ngModel)]="selectedUser" class="selector">
+    <option class="selected" [ngValue]="undefined" selected hidden>Select user</option>
+    <option class="options" *ngFor="let user of usersfiltered.data.users" [ngValue]="user">{{ user.firstName }} {{ user.lastName }}</option>
+  </select>
 
-    <p class="change-creds">Change last name:</p>
-    <div class="input-group">
-      <app-input
-        [id]="'lastName'"
-        [formInputStyle]="'user-edit__input'"
-        [type]="'text'"
-        [placeholder]="'Last name'"
-        [controlName]="updateUserForm.controls.lastName"
-        [value]="selectedUser.lastName">
-      </app-input>
-      <app-error
-        [class]="'user-editor-error-msg'"
-        *ngIf="
-          updateUserForm.get('lastName').errors?.required &&
-          updateUserForm.get('lastName').touched">
-        {{ validationMessages.required }}
-      </app-error>
-      <app-error
-        [class]="'user-editor-error-msg'"
-        *ngIf="
-          updateUserForm.get('lastName').errors?.minlength &&
-          updateUserForm.get('lastName').touched">
-        {{ validationMessages.lastName }}
-      </app-error>
+  <div *ngIf="selectedUser">
+    <form
+      class="updateUser"
+      [formGroup]="updateUserForm"
+      (ngSubmit)="updateUser(updateUserForm)">
+      <p class="change-creds">Change first name:</p>
 
-      <div class="change-pic-form-wrapper">
-        <p class="change-creds">Change your profile picture:</p>
-        <div class="input_file">
-          <app-label [for]="'pic__input'" [labelStyle]="'user-edit-form__file'">
-            <i class="fa fa-arrow-down" aria-hidden="true"></i> Select your
-            profile image
-          </app-label>
+      <div class="input-group">
+        <app-input
+          [id]="'firstName'"
+          [formInputStyle]="'user-edit__input'"
+          [type]="'text'"
+          [placeholder]="'First name'"
+          [controlName]="updateUserForm.controls.firstName"
+          [value]="selectedUser.firstName">
+        </app-input>
+      </div>
+
+      <p class="change-creds">Change last name:</p>
+      <div class="input-group">
+        <app-input
+          [id]="'lastName'"
+          [formInputStyle]="'user-edit__input'"
+          [type]="'text'"
+          [placeholder]="'Last name'"
+          [controlName]="updateUserForm.controls.lastName"
+          [value]="selectedUser.lastName">
+        </app-input>
+
+        <div class="change-pic-form-wrapper">
+          <p class="change-creds">Change your profile picture:</p>
+          <div class="input_file">
+            <app-label [for]="'pic__input'" [labelStyle]="'user-edit-form__file'">
+              <i class="fa fa-arrow-down" aria-hidden="true"></i> Select your profile image
+            </app-label>
+            <app-input
+              [id]="'pic__input'"
+              [formInputStyle]="'user-editor-form__file'"
+              [type]="'file'"
+              [controlName]="updateUserForm.controls.picture"
+              [accept]="'image/*'"
+              (change)="pictureUpload($event)">
+            </app-input>
+          </div>
+        </div>
+
+        <div class="profile-pic-wrapper">
+          <app-image
+            *ngIf="!pictureUrl"
+            [url]="'../../assets/img/avatar.png'"
+            [className]="'profile-pic-editor'">
+          </app-image>
+          <app-image
+            *ngIf="pictureUrl"
+            [url]="pictureUrl"
+            [className]="'profile-pic-editor'">
+          </app-image>
+        </div>
+
+        <p>Old password:</p>
+        <div class="input-group">
           <app-input
-            [id]="'pic__input'"
-            [formInputStyle]="'user-editor-form__file'"
-            [type]="'file'"
-            [controlName]="updateUserForm.controls.picture"
-            [accept]="'image/*'"
-            (change)="pictureUpload($event)">
+            [id]="'oldPassword'"
+            [formInputStyle]="'user-edit__input'"
+            [type]="'password'"
+            [placeholder]="'Old password'"
+            [controlName]="updateUserForm.controls.changePasswordGroup.controls.oldPassword">
           </app-input>
+          <app-error
+            [class]="'user-editor-error-msg'"
+            *ngIf="
+              updateUserForm.get('changePasswordGroup.oldPassword').errors?.required &&
+              updateUserForm.get('changePasswordGroup.oldPassword').touched">
+            {{ validationMessages.required }}
+          </app-error>
+          <app-error
+            [class]="'user-editor-error-msg'"
+            *ngIf="
+              updateUserForm.get('changePasswordGroup.oldPassword').errors?.minlength &&
+              updateUserForm.get('changePasswordGroup.oldPassword').touched">
+            {{ validationMessages.password }}
+          </app-error>
+        </div>
+
+        <div class="input-group">
+          <p>New password:</p>
+          <app-input
+            [id]="'password'"
+            [formInputStyle]="'user-edit__input'"
+            [placeholder]="'New password'"
+            [type]="'password'"
+            [controlName]="
+              updateUserForm.controls.changePasswordGroup.controls.passwordGroup.controls.password">
+          </app-input>
+          <app-error
+            [class]="'user-editor-error-msg'"
+            *ngIf="
+              updateUserForm.get('changePasswordGroup.passwordGroup.password').errors?.required &&
+              updateUserForm.get('changePasswordGroup.passwordGroup.password').touched">
+            {{ validationMessages.required }}
+          </app-error>
+          <app-error
+            [class]="'user-editor-error-msg'"
+            *ngIf="
+              updateUserForm.get('changePasswordGroup.passwordGroup.password').errors?.minlength &&
+              updateUserForm.get('changePasswordGroup.passwordGroup.password').touched">
+            {{ validationMessages.password }}
+          </app-error>
+
+          <p>Confirm new password:</p>
+
+          <app-input
+            ng-blur="visitedEmail=true"
+            [id]="'repeatPassword'"
+            [formInputStyle]="'user-edit__input'"
+            [placeholder]="'Confirm password'"
+            [type]="'password'"
+            [controlName]="
+              updateUserForm.controls.changePasswordGroup.controls.passwordGroup.controls.repeatPassword">
+          </app-input>
+          <app-error
+            [class]="'user-editor-error-msg'"
+            *ngIf="
+              updateUserForm.get('changePasswordGroup.passwordGroup.repeatPassword').errors
+                ?.required &&
+              updateUserForm.get('changePasswordGroup.passwordGroup.repeatPassword').dirty">
+            {{ validationMessages.required }}
+          </app-error>
+          <app-error
+            [class]="'user-editor-error-msg'"
+            *ngIf="updateUserForm.get('changePasswordGroup.passwordGroup').errors?.match">
+            {{ validationMessages.matchingPassword }}
+          </app-error>
         </div>
       </div>
-
-      <div class="profile-pic-wrapper">
-        <app-image
-          *ngIf="!pictureUrl"
-          [url]="'../../assets/img/avatar.png'"
-          [className]="'profile-pic-editor'">
-        </app-image>
-        <app-image
-          *ngIf="pictureUrl"
-          [url]="pictureUrl"
-          [className]="'profile-pic-editor'">
-        </app-image>
-      </div>
-
-      <p>Old password:</p>
-      <div class="input-group">
-        <app-input
-          [id]="'oldPassword'"
-          [formInputStyle]="'user-edit__input'"
-          [type]="'password'"
-          [placeholder]="'Old password'"
-          [controlName]="updateUserForm.controls.changePasswordGroup.controls.oldPassword">
-        </app-input>
-        <app-error
-          [class]="'user-editor-error-msg'"
-          *ngIf="
-            updateUserForm.get('changePasswordGroup.oldPassword').errors?.required &&
-            updateUserForm.get('changePasswordGroup.oldPassword').touched">
-          {{ validationMessages.required }}
-        </app-error>
-        <app-error
-          [class]="'user-editor-error-msg'"
-          *ngIf="
-            updateUserForm.get('changePasswordGroup.oldPassword').errors?.minlength &&
-            updateUserForm.get('changePasswordGroup.oldPassword').touched">
-          {{ validationMessages.password }}
-        </app-error>
-      </div>
-
-      <div class="input-group">
-        <p>New password:</p>
-        <app-input
-          [id]="'password'"
-          [formInputStyle]="'user-edit__input'"
-          [placeholder]="'New password'"
-          [type]="'password'"
-          [controlName]="
-            updateUserForm.controls.changePasswordGroup.controls.passwordGroup.controls.password">
-        </app-input>
-        <app-error
-          [class]="'user-editor-error-msg'"
-          *ngIf="
-            updateUserForm.get('changePasswordGroup.passwordGroup.password').errors?.required &&
-            updateUserForm.get('changePasswordGroup.passwordGroup.password').touched">
-          {{ validationMessages.required }}
-        </app-error>
-        <app-error
-          [class]="'user-editor-error-msg'"
-          *ngIf="
-            updateUserForm.get('changePasswordGroup.passwordGroup.password').errors?.minlength &&
-            updateUserForm.get('changePasswordGroup.passwordGroup.password').touched">
-          {{ validationMessages.password }}
-        </app-error>
-
-        <p>Confirm new password:</p>
-
-        <app-input
-          ng-blur="visitedEmail=true"
-          [id]="'repeatPassword'"
-          [formInputStyle]="'user-edit__input'"
-          [placeholder]="'Confirm password'"
-          [type]="'password'"
-          [controlName]="
-            updateUserForm.controls.changePasswordGroup.controls.passwordGroup.controls.repeatPassword">
-        </app-input>
-        <app-error
-          [class]="'user-editor-error-msg'"
-          *ngIf="
-            updateUserForm.get('changePasswordGroup.passwordGroup.repeatPassword').errors
-              ?.required &&
-            updateUserForm.get('changePasswordGroup.passwordGroup.repeatPassword').dirty">
-          {{ validationMessages.required }}
-        </app-error>
-        <app-error
-          [class]="'user-editor-error-msg'"
-          *ngIf="updateUserForm.get('changePasswordGroup.passwordGroup').errors?.match">
-          {{ validationMessages.matchingPassword }}
-        </app-error>
-      </div>
-    </div>
-    <app-submit-btn
+      <app-submit-btn
         [buttonStyle]="''"
         [type]="'submit'"
         [disabled]="updateUserForm.invalid">
-        Change password
+        Update user
       </app-submit-btn>
-  </form>
+    </form>
+  </div>
 </div>
