--- a/frontend/src/admin/bookmark-info/bookmark-info.component.html
+++ b/frontend/src/admin/bookmark-info/bookmark-info.component.html
@@ -1,6 +1,6 @@
 <div class="bookmark-info">
     <div class="bookmark-info--title">
-        <p>Bookmark title: <Strong>{{data.title}}</Strong></p> 
+        <p>Title: <Strong>{{data.title}}</Strong></p> 
     </div>
     <div class="bookmark-info--position">
         <p>Position: <Strong>{{data.position}}</Strong></p>
