admin user editor done/ merged with master

--- a/frontend/src/admin/admin-user-editor/admin-user-editor.component.html
+++ b/frontend/src/admin/admin-user-editor/admin-user-editor.component.html
@@ -1,8 +1,8 @@
-<div class="errorMSG" *ngIf="message">
+<div class="errorMSG" *ngIf="error">
   Error during update: {{error}}
 </div>
 
-<div class="successMSG" *ngIf="isSent">
+<div class="successMSG" *ngIf="send">
   User has been updated
 </div>
 
