--- a/frontend/src/admin/bookmark-panel/bookmark-panel.component.scss
+++ b/frontend/src/admin/bookmark-panel/bookmark-panel.component.scss
@@ -8,25 +8,19 @@
     align-content: space-between;
     flex-direction: column;
 
-    .add-bookmark{
+    .add-bookmark {
         display: flex;
         align-self: flex-end;
         padding-bottom: 10px;
-     
 
-        i{
+        i {
             font-size: 35px;
             color: $main-color;
-           
-            
-            
-            
+  
         }
 
-        p{
-            // margin-right: 8px;
+        p {
             line-height: 50px;
-            // color: $main-color;
             font-weight: bold;
         }
 
@@ -39,7 +33,36 @@
         align-items: center;
         background-color: $sec-back-color;
 
-    }
+    }  
+}
+
+.add-bookmark{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+     .bookmark-add-form{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        textarea {
+            background-color: transparent;
+            vertical-align: middle;
+            padding: 10px 12px;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            margin-right: 15px;
+        }
+
+        .bookmark-add-form__label--position {
+            padding: 5px;
+            font-weight: bold;
+            color: $main-color;
+        }
+    
 }
         
            
