--- a/frontend/src/shared/forms/input/input.component.scss
+++ b/frontend/src/shared/forms/input/input.component.scss
@@ -119,7 +119,7 @@ input {
 
 
 //BOOKMARK-EDITOR 
-.bookmark-editor__input {
+.bookmark-editor__input, .bookmark-form__input {
     padding: 10px;
     border: 1px solid #A5B1BE;
     margin-left: 10px;
@@ -129,3 +129,5 @@ input {
         outline: none;
     }
 }
+
+//BOOKMARK-PANEL/MODAL
