--- a/frontend/src/assets/main-style.scss
+++ b/frontend/src/assets/main-style.scss
@@ -9,7 +9,7 @@ $back-color: #373F46;
 // $sec-back-color: rgba(153,153,255, 0.2);
 $sec-back-color: #444444;
 
-$main-color: #E0A905;
+$main-color: #e0a905;
 $main-font-color: #FEFEFA;
 
 $btn-color: #31ABED;
