--- a/frontend/src/admin/bookmark-panel/bookmark-panel.component.scss
+++ b/frontend/src/admin/bookmark-panel/bookmark-panel.component.scss
@@ -16,7 +16,10 @@
         i {
             font-size: 35px;
             color: $main-color;
-  
+            &:hover {
+                color: #cd9b05;
+            }
+           
         }
 
         p {
@@ -55,6 +58,12 @@
             margin-top: 10px;
             margin-bottom: 10px;
             margin-right: 15px;
+            color: $main-font-color;
+
+                &:focus{
+                    border: 1px solid $main-color;
+                    outline: none;
+                }
         }
 
         .bookmark-add-form__label--position {
