--- a/frontend/src/shared/components/button/button.component.scss
+++ b/frontend/src/shared/components/button/button.component.scss
@@ -10,6 +10,10 @@
     margin: 0.5em;
     padding: 1rem;
     border-radius: 3px;
+    transition: 0.4s;
+        &:hover {
+            background-color: #cd9b05;
+        }
 }
 
 .boomark-info__button--delete{
@@ -22,9 +26,13 @@
     margin: 0.5em;
     padding: 1rem;
     border-radius: 3px;
+    transition: 0.4s;
+        &:hover {
+            background-color: #2C87D8;
+        }
 }
 
-.app-bookmark {
+.add-bookmark {
     display:inline-block;
     height: 50px;
     width: 50px;
@@ -32,7 +40,7 @@
     border: none;
     cursor: pointer;
     background-color: $back-color;
-   
+
 }
 .modal__close-btn {
     cursor: pointer;
