--- a/frontend/src/shared/components/modal/modal.component.scss
+++ b/frontend/src/shared/components/modal/modal.component.scss
@@ -22,7 +22,7 @@
     width: 90%;
     max-width: 520px;
     background-color: $back-color;
-    padding: 20px;
+    padding: 30px 20px;
     box-shadow: 0 7px 8px -4px rgba(0, 0, 0, 0.2), 0 13px 19px 2px rgba(0, 0, 0, 0.14), 0 5px 24px 4px rgba(0, 0, 0, 0.12);
   }
   
