create delete update done

--- a/frontend/src/admin/bookmark-form/bookmark-form.component.html
+++ b/frontend/src/admin/bookmark-form/bookmark-form.component.html
@@ -9,6 +9,11 @@
             [controlName]="bookmarkEditForm.controls.title"
             [value]="bookmarkEditForm.controls['title'].value">
         </app-input>
+        <app-error
+            [class]="'error-msg-addBookmark'"
+            *ngIf="bookmarkEditForm.get('title').errors?.required && bookmarkEditForm.get('title').touched">
+            Title can't be ampty
+        </app-error>
       </div>
       <div class="form-group">
         <label for="content">Content: </label>
@@ -17,9 +22,15 @@
             id="content" 
             rows="6" 
             cols="20" 
-            [formControl]="bookmarkEditForm.controls.content"></textarea>
+            [formControl]="bookmarkEditForm.controls.content">
+        </textarea>
+        <app-error
+            [class]="'error-msg-addBookmark'"
+            *ngIf="bookmarkEditForm.get('content').errors?.required && bookmarkEditForm.get('content').touched">
+            Content can't be empty
+        </app-error>
       </div>
-      <div class="form-group">
+      <div class="form-group"  style="margin-top: 10px">
           <label for="position">Position: </label>
           <label class="bookmar-edit-form__label--position">
               <app-input 
@@ -43,6 +54,6 @@
             </app-input>RIGHT
            </label>
         </div>
-        <app-submit-btn [buttonStyle]="'button'" [type]="'submit'" > Save changes</app-submit-btn>
+        <app-submit-btn [disabled]="bookmarkEditForm.invalid" [buttonStyle]="'button'" [type]="'submit'" > Save changes</app-submit-btn>
     </form>
 </div>
