--- a/frontend/src/shared/components/button/button.component.html
+++ b/frontend/src/shared/components/button/button.component.html
@@ -1,1 +1,1 @@
-<button [class]="class" (click)="clickedEvent($event)"><ng-content></ng-content></button>
+<button [class]="class" [disabled]="disabled" (click)="clickedEvent($event)" ><ng-content></ng-content></button>
