--- a/frontend/src/shared/components/error/error.component.scss
+++ b/frontend/src/shared/components/error/error.component.scss
@@ -21,7 +21,7 @@
     position: relative;
 }
 
-.error-msg:before {
+.error-msg:before, .error-msg-addBookmark:before {
     content: '';
     display: inline-block;
     position: absolute;
@@ -60,4 +60,18 @@
     text-align: center;
     top:-10px;
     left: calc(50% - 10px);
+}
+
+.error-msg-addBookmark {
+    background-color: rgba(248,000,000,0.5);
+    padding: 10px;
+    display: block;
+    color: #FFF;
+    margin-bottom: 10px;
+    font-size: 0.8em;
+    position: relative;
+    margin-top: 10px;
+    width: 150px;
+    text-align: center;
+    margin-left: 65px;
 }
