--- a/frontend/src/assets/main-style.scss
+++ b/frontend/src/assets/main-style.scss
@@ -12,6 +12,8 @@ $sec-back-color: #444444;
 $main-color: #E0A905;
 $main-font-color: #FEFEFA;
 
+$border-color: #AFAFAF;
+
 $btn-color: #31ABED;
 
 $btn-font-size: 14px;
