--- a/frontend/src/shared/components/label/label.component.scss
+++ b/frontend/src/shared/components/label/label.component.scss
@@ -33,7 +33,7 @@
     }
 }
 
-.user-edit-form__file {
+.user-editor__form-file {
     font-size: 0.75rem;
     display: block;
     background-color: $main-color;
