--- a/frontend/src/user/user-editor/user-editor.component.html
+++ b/frontend/src/user/user-editor/user-editor.component.html
@@ -1,23 +1,23 @@
-<div class="errorMSG" *ngIf="error">
+<div class="user-editor__error-msg" *ngIf="error">
   Error during update: {{error}}
 </div>
 
-<div class="successMSG" *ngIf="send">
+<div class="user-editor__success-msg" *ngIf="send">
   User has been updated
 </div>
 
-<div *ngIf="current.firstName" class="container">
+<div *ngIf="current.firstName" class="user-editor__container">
   <form
-    class="updateUser"
+    class="user-editor__update-user"
     [formGroup]="updateUserForm"
     (ngSubmit)="updateUser(updateUserForm)">
     
-    <p class="change-creds">Change first name:</p>
+    <p class="user-editor__change-creds">Change first name:</p>
 
-    <div class="input-group">
+    <div class="user-editor__input-group">
       <app-input
         [id]="'firstName'"
-        [formInputStyle]="'user-edit__input'"
+        [formInputStyle]="'user-editor__input'"
         [type]="'text'"
         [placeholder]="'First name'"
         [controlName]="updateUserForm.controls.firstName"
@@ -25,26 +25,26 @@
       </app-input>
     </div>
 
-    <p class="change-creds">Change last name:</p>
-    <div class="input-group">
+    <p class="user-editor__change-creds">Change last name:</p>
+    <div class="user-editor__input-group">
       <app-input
         [id]="'lastName'"
-        [formInputStyle]="'user-edit__input'"
+        [formInputStyle]="'user-editor__input'"
         [type]="'text'"
         [placeholder]="'Last name'"
         [controlName]="updateUserForm.controls.lastName"
         [value]="current.lastName">
       </app-input>
 
-      <div class="change-pic-form-wrapper">
-        <p class="change-creds">Change your profile picture:</p>
-        <div class="input_file">
-          <app-label [for]="'pic__input'" [labelStyle]="'user-edit-form__file'">
+      <div class="user-editor__change-pic-form-wrapper">
+        <p class="user-editor__change-creds">Change your profile picture:</p>
+        <div class="user-editor__input-file">
+          <app-label [for]="'pic__input'" [labelStyle]="'user-editor__form-file'">
             <i class="fa fa-arrow-down" aria-hidden="true"></i> Select your profile image
           </app-label>
           <app-input
             [id]="'pic__input'"
-            [formInputStyle]="'user-editor-form__file'"
+            [formInputStyle]="'user-editor__form-file'"
             [type]="'file'"
             [controlName]="updateUserForm.controls.picture"
             [accept]="'image/*'"
@@ -53,7 +53,7 @@
         </div>
       </div>
 
-      <div class="profile-pic-wrapper">
+      <div class="user-editor__profile-pic-wrapper">
         <app-image
           *ngIf="!pictureUrl"
           [url]="'../../assets/img/avatar.png'"
@@ -67,52 +67,47 @@
       </div>
 
       <p>Old password:</p>
-      <div class="input-group">
+      <div class="user-editor__input-group">
         <app-input
           [id]="'oldPassword'"
-          [formInputStyle]="'user-edit__input'"
+          [formInputStyle]="'user-editor__input'"
           [type]="'password'"
           [placeholder]="'Old password'"
           [controlName]="updateUserForm.controls.changePasswordGroup.controls.oldPassword">
         </app-input>
         <app-error
-          [class]="'user-editor-error-msg'"
-          *ngIf="
-            updateUserForm.get('changePasswordGroup.oldPassword').errors?.required &&
-            updateUserForm.get('changePasswordGroup.oldPassword').touched">
+          [class]="'user-editor__input-error-msg'"
+          *ngIf="updateUserForm.get('changePasswordGroup.oldPassword').errors?.required 
+          && updateUserForm.get('changePasswordGroup.oldPassword').touched">
           {{ validationMessages.required }}
         </app-error>
         <app-error
-          [class]="'user-editor-error-msg'"
-          *ngIf="
-            updateUserForm.get('changePasswordGroup.oldPassword').errors?.minlength &&
-            updateUserForm.get('changePasswordGroup.oldPassword').touched">
+          [class]="'user-editor__input-error-msg'"
+          *ngIf="updateUserForm.get('changePasswordGroup.oldPassword').errors?.minlength
+          && updateUserForm.get('changePasswordGroup.oldPassword').touched">
           {{ validationMessages.password }}
         </app-error>
       </div>
 
-      <div class="input-group">
+      <div class="user-editor__input-group">
         <p>New password:</p>
         <app-input
           [id]="'password'"
-          [formInputStyle]="'user-edit__input'"
+          [formInputStyle]="'user-editor__input'"
           [placeholder]="'New password'"
           [type]="'password'"
-          [controlName]="
-            updateUserForm.controls.changePasswordGroup.controls.passwordGroup.controls.password">
+          [controlName]="updateUserForm.controls.changePasswordGroup.controls.passwordGroup.controls.password">
         </app-input>
         <app-error
-          [class]="'user-editor-error-msg'"
-          *ngIf="
-            updateUserForm.get('changePasswordGroup.passwordGroup.password').errors?.required &&
-            updateUserForm.get('changePasswordGroup.passwordGroup.password').touched">
+          [class]="'user-editor__input-error-msg'"
+          *ngIf="updateUserForm.get('changePasswordGroup.passwordGroup.password').errors?.required
+          && updateUserForm.get('changePasswordGroup.passwordGroup.password').touched">
           {{ validationMessages.required }}
         </app-error>
         <app-error
-          [class]="'user-editor-error-msg'"
-          *ngIf="
-            updateUserForm.get('changePasswordGroup.passwordGroup.password').errors?.minlength &&
-            updateUserForm.get('changePasswordGroup.passwordGroup.password').touched">
+          [class]="'user-editor__input-error-msg'"
+          *ngIf="updateUserForm.get('changePasswordGroup.passwordGroup.password').errors?.minlength
+          && updateUserForm.get('changePasswordGroup.passwordGroup.password').touched">
           {{ validationMessages.password }}
         </app-error>
 
@@ -121,22 +116,19 @@
         <app-input
           ng-blur="visitedEmail=true"
           [id]="'repeatPassword'"
-          [formInputStyle]="'user-edit__input'"
+          [formInputStyle]="'user-editor__input'"
           [placeholder]="'Confirm password'"
           [type]="'password'"
-          [controlName]="
-            updateUserForm.controls.changePasswordGroup.controls.passwordGroup.controls.repeatPassword">
+          [controlName]="updateUserForm.controls.changePasswordGroup.controls.passwordGroup.controls.repeatPassword">
         </app-input>
         <app-error
-          [class]="'user-editor-error-msg'"
-          *ngIf="
-            updateUserForm.get('changePasswordGroup.passwordGroup.repeatPassword').errors
-              ?.required &&
-            updateUserForm.get('changePasswordGroup.passwordGroup.repeatPassword').dirty">
+          [class]="'user-editor__input-error-msg'"
+          *ngIf="updateUserForm.get('changePasswordGroup.passwordGroup.repeatPassword').errors?.required
+            && updateUserForm.get('changePasswordGroup.passwordGroup.repeatPassword').dirty">
           {{ validationMessages.required }}
         </app-error>
         <app-error
-          [class]="'user-editor-error-msg'"
+          [class]="'user-editor__input-error-msg'"
           *ngIf="updateUserForm.get('changePasswordGroup.passwordGroup').errors?.match">
           {{ validationMessages.matchingPassword }}
         </app-error>
